com.top_logic.themes.core/src/main/webapp/style/tables.css
/* ... */
td.regTDselected100 {
	font-size:        10px;
	font-weight:	  bold;
    white-space:      nowrap;
	padding:          0px;
	vertical-align:   top;
	border-color:     var(--border-strong);
	color:            var(--text-primary);
	background-color: #ADAEAD;
	width:          100%;
}

select.tbl {	/* Tables can be written as selects, using this style */
 	width: 80%;
}

.fltButton {
	padding-left: var(--spacing-01);
}

.tl-table__header-cell-content .fltButton.tl-table__filter-sort-icons {
	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
	align-self: center;
}

.tl-table__header-cell-content .fltButton:not(.activeFilter):not(.tl-table__filter-sort-icons) {
	color: var(--icon-disabled);
}

.tl-table__header-cell-content .fltButton:not(.activeFilter):not(.tl-table__filter-sort-icons):hover {
	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
}

.tl-table__header-cell-content .fltButton.activeFilter {
	color: var(--icon-interactive);
}

.tl-table__header-cell-content .fltButton.activeFilter:hover {
	color: var(--support-danger);
}

i.bi-funnel-fill.tablefilter {
	color: var(--icon-interactive);
}

a:not(.disabled) i.bi-funnel-fill.tablefilter:hover {
	color: var(--support-danger);
}

th span.tl-table__filter-sort-icons {
	align-self: end;
	font-size: .6rem;
}

tr.sortState{
	background: var(--FILTER_SORT_DIALOG_SORT_STATE);
}

div.tl-table__filter-sort-container {
	width: 100%;
	height: 100%;
	cursor: pointer;
	min-width: 1.5em;
	display: flex;
	align-items: center;
}

.sidebarFilterContainer {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	overflow-x: hidden;
	overflow-y: auto;
	background-color: var(--layer);
    height: 100%;
}

.sidebarFilterContainer > div {
  	margin-bottom: var(--spacing-03);
}

.sidebarFilterEntry {
	position: relative;
	box-sizing: border-box;
	height: 1.5rem;
	width: 100%;
	white-space: nowrap;
	background: var(--layer);
	padding-left: var(--spacing-01);
	display: flex;
	align-items: center;
}

.collapsibleFilterEntry {
	cursor: pointer;
}

.resetSidebarFilterButton {
	position: absolute;
	right: 0;
	padding-right: var(--spacing-01);
}

table.tblFrozen {
    table-layout: fixed;
    margin: 0;
    padding: 0;
    border-spacing: 0;
    border: 0;
    border-right: var(--TABLE_COLUMN_BORDER_WIDTH) solid var(--border-subtle);
    border-collapse: collapse;
}

.tblFrozenControlTag {
	overflow: hidden;
}

div.tblFrozen {
	position: relative;
	height: 100%;
	width: 100%;
}

div.tblFrozenTitle {
	position:relative;
	overflow: hidden;
	height: var(--FROZEN_TABLE_TITLE_HEIGHT);
}

div.tblTreeFrozenTitle {
	position:relative;
	overflow: hidden;
	height: var(--FROZEN_TREE_TABLE_TITLE_HEIGHT);
}

div.tblFrozenTitle > table.tblFrozen,
div.tblTreeFrozenTitle > table.tblFrozen {
	box-sizing: border-box;
	width: 100%;
	height: 100%;
}

tr.tblFrozen {
}

tr.tblFilterDirectMatch {
}

tr.tblFilterDirectMatch td,
tr.tblFilterDirectMatch td input {
}

tr.tblFilterIndirectMatch {
}

tr.tblFilterIndirectMatch td {
	color: var(--text-disabled);
}

tr.tblSelected.tblFilterIndirectMatch td {
	color: var(--text-on-color-disabled);
}

tr.tblFilterIndirectMatch .cButton a {
	color: var(--icon-disabled);
}

.tblFilterIndirectMatch.tl-table__row:not(.tblSelected):hover .tl-table__cell-container {
	color: var(--text-on-color-disabled);
}

.tblFilterIndirectMatch.tl-table__row:not(.tblSelected):hover .cButton a {
	color: var(--icon-on-color-disabled);
}

tr.tblFilterIndirectMatch td img,
tr.tblFilterIndirectMatch td select,
tr.tblFilterIndirectMatch td input {
	opacity: 0.6;
}

tr.tblFilterNotValidated {
}

tr.tblFilterNotValidated td,
tr.tblFilterNotValidated td input,
tr.tblFilterNotValidated td select,
tr.tblFilterNotValidated td label {
	font-weight: bold;
	color: var(--text-primary);
}

tr.tblFrozen.title {
	height: var(--FROZEN_TABLE_TITLE_HEIGHT);
}

/* the header row in the grid may have another height */
tr.tblFrozen.header {
	height: var(--FROZEN_TABLE_HEADER_ROW_HEIGHT);
}

div.tblColumnBorderLine {
	position: absolute;
	width: 4px;
	background-color: #808080; /*grey*/
	cursor: e-resize;
}

div.tblColumnAdjustmentPane {
	position: absolute;
	cursor: e-resize;
	width: 100%;
	height: 100%;
	background-color: white;
	opacity: 0;
}

div.tblColumnAdjustmentGrabber {
	position: absolute;
	cursor: e-resize;
	width: 4px;
	height: 100%;
	top: 0px;
	right: 0px;
	background-color: white;
	border-width: 0px;
	margin: 0px;
	padding: 0px;
	opacity: 0;
}

div.tblCellAdjustment {
	top: 0px;
	left: 0px;
	width:100%;
	padding: 0px;
	margin: 0px;
	border-width: 0px;
	overflow: hidden;
	white-space: nowrap;
}

div.tblCellInnerSpacer {
	margin: 2px;
	overflow: visible;
	position: relative;
}

.tblFrozen div.tblCellInnerSpacer {
	white-space: nowrap;
}

div.tblCellAdjustment {
	position: relative;
}

/*********************************************************************/

div.tblFrozen th.treeTableTh, div.tblFrozen td.treeTableTd, div.tblFrozen td.treeTableTdFirst {
	padding: 0px;
}

div.tblSeperator, div.tblSeperatorLine {
	background-color: var(--border-subtle);
	cursor: e-resize;
}

div.tblSeperatorLine {
	position: absolute;
	opacity: 60;
}

/* ============================================================== */
/* ====== Flexible layout of input elements in fixed tables ===== */
/* ============================================================== */

table td span.cError {
	position: absolute;
	top: 0px;
	right: 2px;	
}

table td span.cError i {
	font-size: var(--FONT_SIZE_SMALL);
	line-height: var(--FONT_SIZE_SMALL); 	
}

/* Place error images at regular position in title of
 frozen tables (e.g. needed for gallery edit dialog). */
.tl-table__title span.cError img,
.tl-table__title span.cError i {
	position: static;
}

table td .ddwttDropBtn,
table td .ddwttDropBtn .ddwttButtonContent {
	flex-grow: 1;
}

table td .ddwttContainer {
	width: 100%;
}
/* ... */

